examples/test/testpolicy1488.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy1488
  namespace: namespace63
spec:
  podSelector:
    matchLabels:
      key1: value11
      key41: value11
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key7: value42
          key8: value32
      podSelector:
        matchLabels:
          key46: value2
